# dynamon

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
cmake/: dynamon_install.cmake
include/: dynamon.h
src/: dynamon.c
